Don’t use flexbox for alignment, CSSTidy strips parts and breaks the display in firefox (issue in Jetpack).

--- a/sass/_widgets.scss
+++ b/sass/_widgets.scss
@@ -63,12 +63,10 @@
 	}
 
 	.widget:nth-of-type(1) {
-		display: flex;
-		justify-content: center;
-		flex-direction: column;
+		margin-top: 20px;
 		padding: 0;
 		width: 100%;
-		height: 100px;
+		height: 80px;
 		@include font-size( 2.8 );
 		letter-spacing: 2px;
 		text-transform: uppercase;
@@ -108,7 +106,8 @@
 		margin-top: -160px;
 
 		.widget:nth-of-type(1) {
-			height: 160px;
+			margin-top: 60px;
+			height: 100px;
 		}
 	}
 }
