--- a/style.css
+++ b/style.css
@@ -314,18 +314,10 @@ a.cta-button {
     #after-header-widgets .widget p {
       margin: 0; }
   #after-header-widgets .widget:nth-of-type(1) {
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-justify-content: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-flex-direction: column;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    margin-top: 20px;
     padding: 0;
     width: 100%;
-    height: 100px;
+    height: 80px;
     font-size: 28px;
     font-size: 2.8rem;
     letter-spacing: 2px;
@@ -353,7 +345,8 @@ a.cta-button {
   .home #after-header-widgets {
     margin-top: -160px; }
     .home #after-header-widgets .widget:nth-of-type(1) {
-      height: 160px; }
+      margin-top: 60px;
+      height: 100px; }
 
 #before-content-widgets {
   background: white; }
